<resources>
    <string name="app_name">Marvel</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Registrarse</string>
    <string name="action_log_in">Iniciar sesión</string>
    <string name="error_invalid_email">La dirección de correo es invalida</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_user_exists">Ya existe un usuario registrado con el email ingresado, por favor inicia sesión</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="search">Buscar</string>
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_server">Ocurrió un error, por favor intenta más tarde</string>
    <string name="register_success">Registro exitoso, inicia sesión.</string>
    <string name="permission_rationale">"El permiso para leer contactos es necesario para el autocompletador."</string>
    <string name="options">Opciones</string>
    <string name="logout">Cerrar sesión</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
