<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:textColor="@color/primaryLightText"
        android:orderInCategory="200"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/options"
        android:orderInCategory="101"
        android:icon="@android:drawable/ic_menu_info_details">
        <item
            android:id="@+id/user_email"
            android:title="email" />

        <item
            android:id="@+id/logout"
            android:title="@string/logout" />
    </item>

</menu>